Other file gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 client/.gitignore
 client/.eslintrc.json
 Pipfile
-.gitignore
 client/.editorconfig
 client/.vscode/extensions.json
+client/.vscode/launch.json
+client/.vscode/tasks.json
