add prioritize title function

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ client/.vscode/extensions.json
 client/.vscode/launch.json
 client/.vscode/tasks.json
 client/node_modules
+client/.angular/*
 indexdir/*
